--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,7 +82,11 @@
         </p>
         <div class="works__grid">
   <article class="work-card">
-    <div class="work-card__preview" aria-hidden="true">Website Preview</div>
+    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
+      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/tph-preview.jpg">
+        <source src="assets/video/tph-scroll.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Tay Ping Hui Website</h3>
       <div class="project-meta">
@@ -110,7 +114,11 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview" aria-hidden="true">App Preview</div>
+    <div class="work-card__preview work-card__preview--phone" aria-hidden="true">
+      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/spendimon-preview.jpg">
+        <source src="assets/video/spendimon-demo.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Spendimon Budgeting App</h3>
       <div class="project-meta">
@@ -136,7 +144,11 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview" aria-hidden="true">Website Preview</div>
+    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
+      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/kapa-preview.jpg">
+        <source src="assets/video/kapa-scroll.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="work-card__body">
       <h3 class="work-card__title">KAPA Design Website</h3>
       <div class="project-meta">
@@ -164,7 +176,11 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview" aria-hidden="true">Website Preview</div>
+    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
+      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/liv-preview.jpg">
+        <source src="assets/video/liv-scroll.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="work-card__body">
       <h3 class="work-card__title">LIV Energy Venture</h3>
       <div class="project-meta">
@@ -191,7 +207,11 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview" aria-hidden="true">Website Preview</div>
+    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
+      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/inspired-preview.jpg">
+        <source src="assets/video/inspired-scroll.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Inspired Homes</h3>
       <div class="project-meta">
@@ -218,7 +238,11 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview" aria-hidden="true">Website Preview</div>
+    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
+      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/cklog-preview.jpg">
+        <source src="assets/video/cklog-scroll.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Commonwealth / CK Log Asia</h3>
       <div class="project-meta">
