--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,8 +82,8 @@
         </p>
         <div class="works__grid">
   <article class="work-card">
-    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
-      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/tph-preview.jpg">
+    <div class="work-card__preview browser-mock" aria-hidden="true">
+      <video class="preview-video" autoplay muted loop playsinline preload="metadata">
         <source src="assets/video/tph-scroll.mp4" type="video/mp4" />
       </video>
     </div>
@@ -114,8 +114,8 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview work-card__preview--phone" aria-hidden="true">
-      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/spendimon-preview.jpg">
+    <div class="work-card__preview phone-mock" aria-hidden="true">
+      <video class="preview-video" autoplay muted loop playsinline preload="metadata">
         <source src="assets/video/spendimon-demo.mp4" type="video/mp4" />
       </video>
     </div>
@@ -144,8 +144,8 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
-      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/kapa-preview.jpg">
+    <div class="work-card__preview browser-mock" aria-hidden="true">
+      <video class="preview-video" autoplay muted loop playsinline preload="metadata">
         <source src="assets/video/kapa-scroll.mp4" type="video/mp4" />
       </video>
     </div>
@@ -176,8 +176,8 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
-      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/liv-preview.jpg">
+    <div class="work-card__preview browser-mock" aria-hidden="true">
+      <video class="preview-video" autoplay muted loop playsinline preload="metadata">
         <source src="assets/video/liv-scroll.mp4" type="video/mp4" />
       </video>
     </div>
@@ -207,8 +207,8 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
-      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/inspired-preview.jpg">
+    <div class="work-card__preview browser-mock" aria-hidden="true">
+      <video class="preview-video" autoplay muted loop playsinline preload="metadata">
         <source src="assets/video/inspired-scroll.mp4" type="video/mp4" />
       </video>
     </div>
@@ -238,8 +238,8 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview work-card__preview--browser" aria-hidden="true">
-      <video class="work-card__video" autoplay muted loop playsinline preload="metadata" poster="assets/img/posters/cklog-preview.jpg">
+    <div class="work-card__preview browser-mock" aria-hidden="true">
+      <video class="preview-video" autoplay muted loop playsinline preload="metadata">
         <source src="assets/video/cklog-scroll.mp4" type="video/mp4" />
       </video>
     </div>
