--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -83,8 +83,8 @@
         <div class="works__grid">
   <article class="work-card">
     <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video class="preview-video" autoplay muted loop playsinline preload="metadata" poster="./assets/img/aly-logo.png">
-        <source src="./assets/video/tph-scroll.mp4" type="video/mp4" />
+      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
+        <source src="./assets/video/tph-scroll.mp4" type="video/mp4">
       </video>
     </div>
     <div class="work-card__body">
@@ -117,8 +117,8 @@
   </article>
   <article class="work-card">
     <div class="work-card__preview phone-mock" aria-hidden="true">
-      <video class="preview-video" autoplay muted loop playsinline preload="metadata" poster="./assets/img/aly-logo.png">
-        <source src="./assets/video/spendimon-demo.mp4" type="video/mp4" />
+      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
+        <source src="./assets/video/spendimon-demo.mp4" type="video/mp4">
       </video>
     </div>
     <div class="work-card__body">
@@ -149,8 +149,8 @@
   </article>
   <article class="work-card">
     <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video class="preview-video" autoplay muted loop playsinline preload="metadata" poster="./assets/img/aly-logo.png">
-        <source src="./assets/video/kapa-scroll.mp4" type="video/mp4" />
+      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
+        <source src="./assets/video/kapa-scroll.mp4" type="video/mp4">
       </video>
     </div>
     <div class="work-card__body">
@@ -183,8 +183,8 @@
   </article>
   <article class="work-card">
     <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video class="preview-video" autoplay muted loop playsinline preload="metadata" poster="./assets/img/aly-logo.png">
-        <source src="./assets/video/liv-scroll.mp4" type="video/mp4" />
+      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
+        <source src="./assets/video/liv-scroll.mp4" type="video/mp4">
       </video>
     </div>
     <div class="work-card__body">
@@ -216,8 +216,8 @@
   </article>
   <article class="work-card">
     <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video class="preview-video" autoplay muted loop playsinline preload="metadata" poster="./assets/img/aly-logo.png">
-        <source src="./assets/video/inspired-scroll.mp4" type="video/mp4" />
+      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
+        <source src="./assets/video/inspired-scroll.mp4" type="video/mp4">
       </video>
     </div>
     <div class="work-card__body">
@@ -249,8 +249,8 @@
   </article>
   <article class="work-card">
     <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video class="preview-video" autoplay muted loop playsinline preload="metadata" poster="./assets/img/aly-logo.png">
-        <source src="./assets/video/cklog-scroll.mp4" type="video/mp4" />
+      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
+        <source src="./assets/video/cklog-scroll.mp4" type="video/mp4">
       </video>
     </div>
     <div class="work-card__body">
