--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,10 +82,12 @@
         </p>
         <div class="works__grid">
   <article class="work-card">
-    <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
-        <source src="./assets/video/tph-scroll.mp4" type="video/mp4">
-      </video>
+    <div class="work-card__preview" aria-hidden="true">
+      <div class="browser-mock">
+        <video class="preview-video" autoplay muted loop playsinline preload="metadata">
+          <source src="assets/video/tph-scroll.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Tay Ping Hui Website</h3>
@@ -116,10 +118,12 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview phone-mock" aria-hidden="true">
-      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
-        <source src="./assets/video/spendimon-demo.mp4" type="video/mp4">
-      </video>
+    <div class="work-card__preview" aria-hidden="true">
+      <div class="phone-mock">
+        <video class="preview-video" autoplay muted loop playsinline preload="metadata">
+          <source src="assets/video/spendimon-demo.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Spendimon Budgeting App</h3>
@@ -148,10 +152,12 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
-        <source src="./assets/video/kapa-scroll.mp4" type="video/mp4">
-      </video>
+    <div class="work-card__preview" aria-hidden="true">
+      <div class="browser-mock">
+        <video class="preview-video" autoplay muted loop playsinline preload="metadata">
+          <source src="assets/video/kapa-scroll.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="work-card__body">
       <h3 class="work-card__title">KAPA Design Website</h3>
@@ -182,10 +188,12 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
-        <source src="./assets/video/liv-scroll.mp4" type="video/mp4">
-      </video>
+    <div class="work-card__preview" aria-hidden="true">
+      <div class="browser-mock">
+        <video class="preview-video" autoplay muted loop playsinline preload="metadata">
+          <source src="assets/video/liv-scroll.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="work-card__body">
       <h3 class="work-card__title">LIV Energy Venture</h3>
@@ -215,10 +223,12 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
-        <source src="./assets/video/inspired-scroll.mp4" type="video/mp4">
-      </video>
+    <div class="work-card__preview" aria-hidden="true">
+      <div class="browser-mock">
+        <video class="preview-video" autoplay muted loop playsinline preload="metadata">
+          <source src="assets/video/inspired-scroll.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Inspired Homes</h3>
@@ -248,10 +258,12 @@
     </div>
   </article>
   <article class="work-card">
-    <div class="work-card__preview browser-mock" aria-hidden="true">
-      <video autoplay muted loop playsinline preload="metadata" class="preview-video">
-        <source src="./assets/video/cklog-scroll.mp4" type="video/mp4">
-      </video>
+    <div class="work-card__preview" aria-hidden="true">
+      <div class="browser-mock">
+        <video class="preview-video" autoplay muted loop playsinline preload="metadata">
+          <source src="assets/video/cklog-scroll.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="work-card__body">
       <h3 class="work-card__title">Commonwealth / CK Log Asia</h3>
